--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,21 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
+    /* RoundedImageView API */
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+
+    //Requests
+    implementation 'com.squareup.okhttp:okhttp:2.5.0'
+
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+
+    //Custom font
+    implementation 'uk.co.chrisjenx:calligraphy:2.2.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
