--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.entrevista.santander">
 
+    <!-- Acessar a internet -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- Ver informações da rede -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!-- Permite salvar dados na memória externa -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <uses-permission android:name="android.permission.SET_DEBUG_APP"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
